친구 조회 로직 수정과 주석추가